--- a/package.json
+++ b/package.json
@@ -9,19 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.27.2",
+    "@hookform/resolvers": "^3.3.2",
+    "@neondatabase/serverless": "^0.6.0",
+    "@pinecone-database/pinecone": "^1.1.2",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.8.7",
+    "@uploadthing/react": "^6.0.2",
+    "ai": "^2.2.25",
+    "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "drizzle-orm": "^0.29.0",
+    "drizzle-valibot": "^0.1.1",
+    "langchain": "0.0.197-rc.1",
+    "lucide-react": "^0.293.0",
+    "md5": "^2.3.0",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "sonner": "^1.2.3",
+    "stripe": "^14.5.0",
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.0.3",
+    "valibot": "^0.21.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.6",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
+    "pg": "^8.11.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "typescript": "^5"
   }
 }
